--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "live2dv3",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "在网页上添加 moc3 格式的Live2d模型 https://live2dv3demo.hclonely.com/",
   "main": "live2dv3.js",
   "scripts": {
@@ -29,7 +29,8 @@
     "globals": [
       "PIXI",
       "Live2DCubismCore",
-      "HTMLElement"
+      "HTMLElement",
+      "Audio"
     ]
   }
 }
